--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,7 @@
       "build": "react-scripts build",
       "test": "react-scripts test",
       "eject": "react-scripts eject",
-      "heroku-postbuild": "cd client && npm install && npm run build"
+      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
     },
     "eslintConfig": {
       "extends": "react-app"
